# enotropos

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  RECOMANACIONS.md  pyproject.toml  requirements.txt  start_enotropos.cmd
.github/workflows/: ci.yml
scripts/: _check_chroma.py  build_graph.py  build_index.py  build_knowledge_index.py  build_tables_db.py  eval.py  eval_dataset.json
tests/: conftest.py  test_agent.py  test_build_tables_db.py  test_chunk.py  test_embed.py  test_extract.py  test_graph_builder.py  test_graph_rag.py  test_knowledge.py  test_language.py  test_memory.py  test_parents.py  test_rag_helpers.py  test_schema.py  test_tools_sql.py
winegpt/: __init__.py  agent.py  app.py  chunk.py  config.py  embed.py  extract.py  graph_builder.py  graph_rag.py  knowledge.py  language.py  llm.py  memory.py  parents.py  pipeline.py  rag.py  schema.py  store.py  table_extractor.py  tools.py
