[project]
name = "enotropos"
version = "0.1.0"
description = "RAG AI assistant for EU wine denominations — Spanish pilot"
requires-python = ">=3.11"
dependencies = [
    "pymupdf4llm",
    "fasttext-langdetect",
    "chromadb",
    "openai",
    "streamlit",
    "python-dotenv",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
